--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@microting/ng-schematics",
   "version": "0.2.0",
   "description": "Schematic collection",
+  "private": true,
   "scripts": {
     "bootstrap": "yarn && lerna bootstrap",
     "l": "lerna",
