--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@types/inquirer": "^8.1.3",
-    "@types/jasmine": "^3.5.0",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.14",
-    "ava": "^2.4.0",
-    "husky": "^3.1.0",
-    "jasmine": "^3.5.0",
-    "lerna": "^3.19.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "~2.5.1",
-    "ts-node": "^10.4.0"
+    "@types/inquirer": "8.1.3",
+    "@types/jasmine": "3.5.0",
+    "@types/lodash": "4.14.149",
+    "@types/node": "12.12.14",
+    "ava": "2.4.0",
+    "husky": "3.1.0",
+    "jasmine": "3.5.0",
+    "lerna": "3.19.0",
+    "lint-staged": "9.5.0",
+    "prettier": "2.5.1",
+    "ts-node": "10.4.0"
   },
   "husky": {
     "hooks": {
@@ -53,6 +53,6 @@
     "arrowParens": "always"
   },
   "dependencies": {
-    "strip-ansi": "^5.2.0"
+    "strip-ansi": "5.2.0"
   }
 }
