--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@types/inquirer": "8.1.3",
     "@types/jasmine": "3.10.2",
     "@types/lodash": "4.14.178",
-    "@types/node": "16.11.12",
+    "@types/node": "17.0.5",
     "ava": "3.15.0",
     "husky": "7.0.4",
     "jasmine": "3.10.0",
     "lerna": "4.0.0",
-    "lint-staged": "10.5.4",
+    "lint-staged": "12.1.4",
     "prettier": "2.5.1",
-    "ts-node": "10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "husky": {
     "hooks": {
@@ -53,6 +54,6 @@
     "arrowParens": "always"
   },
   "dependencies": {
-    "strip-ansi": "6.0.1"
+    "strip-ansi": "7.0.1"
   }
 }
