--- a/packages/schematics-core/package.json
+++ b/packages/schematics-core/package.json
@@ -13,17 +13,17 @@
   "author": "Kevin Schuchard",
   "license": "MIT",
   "dependencies": {
-    "@angular-devkit/core": "11.2.15",
-    "@angular-devkit/schematics": "11.2.15",
+    "@angular-devkit/core": "13.1.2",
+    "@angular-devkit/schematics": "13.1.2",
     "@phenomnomnominal/tsquery": "4.1.1",
-    "@schematics/angular": "11.2.15",
+    "@schematics/angular": "13.1.2",
     "fuzzy": "0.1.3",
-    "inquirer": "8.2.0",
+    "inquirer": "^8.2.0",
     "inquirer-autocomplete-prompt": "1.4.0",
     "inquirer-fuzzy-path": "2.3.0",
     "lodash": "4.17.21",
     "rxjs": "7.5.1",
-    "strip-json-comments": "3.1.1",
+    "strip-json-comments": "4.0.0",
     "typescript": "4.5.4"
   },
   "files": [
