Creating first draft for working on angular 13.

--- a/packages/schematics-core/package.json
+++ b/packages/schematics-core/package.json
@@ -29,7 +29,7 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "typings": "./dist/index.d.ts",
   "ava": {
     "files": [
